# mCRL2

./: .clang-format  .clang-tidy  .dockerignore  .git-blame-ignore-revs  .gitignore  .project  CHANGES  CMakeCache.txt  CMakeLists.txt  COPYING  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfig.cmake  CTestCustom.cmake.in  Counterexample.mcf  INSTALL  Jamroot.jam  Makefile  README  README.md  aaa.bool  abp.gs  alphabet1.mcrl2  alphabet2.mcrl2  alphabet3.mcrl2  asfsdf.vim  astylerc  boost-build.jam  clang-format  compile_commands.json  config.in  config.jam.in  configure  configure.ac  cppcheck_ignore.lst  ebnf.vim  eclipse_coding_standard  example2.gs  example3.gs  funccomp.gs  (+30 more)
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  Jamfile.v2  README.MD  README.md  index.xml  release.procedure  requirements.txt
doc/articles/: LTSs.fig  Makefile  PTSs.fig  TLTSs.fig  algorithmic.sty  data_impl.tex  hoas.tex  lin_impl.tex  lpsinfo.tex  lpsparelm.tex  ltsgraph3d_report.tex  mcrl.sty  mcrl2_syntax_definition.tex  mcrl2data.tex  mcrl2lps.tex  mymath.sty  op_ids.tex  timed_extensions.slides.tex  toolset.fig
doc/conventions/: interface.txt
doc/doxy/: Doxyfooter.html  Doxyheader.html  Doxymaster  doxystyle.css  generate_libref_website.sh  index.html
doc/specs/: dot-syntax.g  fsm-syntax.g  mcrl.internal.txt  mcrl2-syntax-release-2011-07-15.g  mcrl2-syntax.g  mcrl2.ebnf  mcrl2.internal.txt  pg-syntax.g  trace.internal.txt
doc/sphinx/: .gitignore  CMakeLists.txt  Doxymaster  Makefile  README.md  conf.in.py  conf.py  conf.py.in  download.rst  generate.py  generate_documentation.py  generate_libref_website.sh  index.rst  mcrl2_package.sty  not_found.rst  showcases.rst  support.rst
doc/sphinx-2/: .gitignore  conf.py  index.rst
doc/src/: boostbook.css  docutils.css  mcrl2.xml  reference.css
doc/tex/: generate_libdocs.py
libraries/: CMakeLists.txt  Jamfile  Jamfile.v2
libraries/aterm/: AUTHORS  CMakeLists.txt
libraries/atermpp/: CMakeLists.txt
libraries/bes/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/data/: CMakeLists.txt  CompilingRewriter.cmake
libraries/gui/: CMakeLists.txt
libraries/lps/: CMakeLists.txt
libraries/lts/: CMakeLists.txt
libraries/modal_formula/: CMakeLists.txt
libraries/pbes/: CMakeLists.txt
libraries/pg/: CMakeLists.txt
libraries/pres/: CMakeLists.txt
libraries/process/: CMakeLists.txt
libraries/res/: CMakeLists.txt
libraries/smt/: CMakeLists.txt
libraries/smt2/: CMakeLists.txt
libraries/svc/: CMakeLists.txt
libraries/symbolic/: CMakeLists.txt
libraries/trace/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt
libraries/wxe/: spinctrlfloat.h
scripts/ltsmin/: CMakeLists.txt  InstallLTSmin.cmake.in
src/: Jamfile.v2  Makefile  Makefile.in  alpha.c  alpha.cpp  config.in  configure  configure.ac  dataimpl.cpp  dataimpl.h  enum_standard.cpp  enum_standard.h  genspect.bkl  gsalpha.c  gsdataimpl.c  gsdataimpl.cpp  gsdataimpl.h  gsfunc.c  gsfunc.h  gsinstantiate.c  gslexer.h  gslexer.l  gslinearise2.c  gslinearise2.h  gslowlevel.c  gslowlevel.h  gsparse.c  gsparser.y  gsprint.c  gsrewr.c  gsrewr_inner.c  gsrewr_inner.h  gsrewr_inner2.c  gsrewr_inner2.h  gsrewr_inner3.c  gsrewr_inner3.h  gsrewr_innerc.c  gsrewr_innerc.h  gsrewr_innerc_aux.h  gsrewr_innerc_aux.h.in  (+138 more)
src/aterm/: _afun.h  _aterm.h  abool.h  afun.c  afun.h  aterm.bkl  aterm.c  aterm1.h  aterm2.h  atermpp.cpp  atermpp.h  atypes.h  bafio.c  bafio.h  byteio.c  byteio.h  debug.h  deprecated.h  encoding.h  gc.c  gc.h  hash.c  list.c  list.h  make.c  make.h  makefile.vc  md5.h  md5c.c  memory.c  memory.h  tafio.c  tafio.h  util.h  version.c  version.h
src/atermpp/: aterm.h  aterm_algorithm.h  aterm_allocator.h  aterm_appl.h  aterm_appl_constructor.h  aterm_blob.h  aterm_conversion.h  aterm_decl.h  aterm_impl.h  aterm_init.h  aterm_int.h  aterm_list.h  aterm_list_iterator.h  aterm_make.h  aterm_make_match.h  aterm_match.h  aterm_place_holder.h  aterm_real.h  atermpp.h  dictionary.h  function_symbol.h  indexed_set.h  replace.h  table.h  transform.h
src/boost/: Jamfile  Jamfile.v2  Makefile  boost-build.jam
src/diagraphica/: Jamfile.v2  Makefile  arcdiagram.cpp  arcdiagram.h  attrconti.h  attribute.cpp  attribute.h  bitmappanel.cpp  bitmappanel.h  bundle.cpp  bundle.h  character_set.xpm  cluster.cpp  cluster.h  colleague.cpp  colleague.h  colorbutton.cpp  colorbutton.h  colorchooser.cpp  colorchooser.h  combnplot.cpp  combnplot.h  corrlplot.cpp  corrlplot.h  diagram.cpp  diagram.h  diagrameditor.cpp  diagrameditor.h  diagraph  diagraph.cpp  diagraph.h  diagraphica.plist  distrplot.cpp  distrplot.h  dof.cpp  dof.h  droptarget.cpp  droptarget.h  edge.cpp  edge.h  (+38 more)
src/doc/: Makefile  bdd2dot.xml  bdd_path_eliminator.xml  bdd_prover.xml  bdd_simplifier.xml  bddprover.xml  confluence_checker.xml  confluencechecker.xml  disjointness_checker.xml  disjointnesschecker.xml  formula_checker.xml  formulachecker.xml  index.xml  invariant_checker.xml  invariant_eliminator.xml  invariantchecker.xml  invarianteliminator.xml  libgsrewrite.xml  librewrite.xml  librewrite_c.xml  lpe2lts.xml  lpe2torx.xml  lpebinary.xml  lpeconfcheck.xml  lpeconstelm.xml  lpedataelm.xml  lpedecluster.xml  lpeformcheck.xml  lpeinfo.xml  lpeinvcheck.xml  lpeinvelm.xml  lpeparelm.xml  lpepp.xml  lperewr.xml  lpesumelm.xml  lpeuntime.xml  lps2lts.xml  lps2torx.xml  lpsbinary.xml  lpsconfcheck.xml  (+38 more)
src/libraries/: Jamfile
src/lpe/: Makefile  action.h  aterm_wrapper.h  constelim.cpp  data.h  data_declaration.h  filter_program.h  function.h  lpe.h  lpe_error.h  lpe_visitor.h  lpeconstelm.cpp  lpeinfo.cpp  lpeparelm.cpp  predefined_symbols.h  pretty_print.h  sort.h  specification.h  substitute.h
src/lpe2lts/: Jamfile.v2  exploration.cpp  exploration.h  lpe2lts.cpp  lpe2lts.h  lts.cpp  squadt_lpe2lts.cpp  squadt_lpe2lts.h  squadt_program.cpp  squadt_program.h
src/lpe2pbes/: Jamfile.v2  libpbes.cpp  libpbes.h  lpe2pbes.cpp
src/lps2lts/: lts.h  (+8 more)
tests/: CMakeLists.txt  GenerateToolTests.cmake  dependencies.cmake  draw.py  randtest.py  replay.py  run_tickets  test.py
tools/: CMakeLists.txt
(+10633 files in other folders)
