find_package(PythonModules 2.4 COMPONENTS sphinx argparse)
find_package(Doxygen QUIET)
find_package(Xsltproc QUIET)
if(XSLTPROC_FOUND AND PythonModules_sphinx_FOUND AND PythonModules_argparse_FOUND AND DOXYGEN_FOUND)
  add_subdirectory(sphinx)
else()
  message(STATUS "**")
  message(STATUS "** Generation of documentation is disabled, not all prerequisites are met:")
  message(STATUS "**   Python packages: sphinx (${PythonModules_sphinx_FOUND}), argparse (${PythonModules_argparse_FOUND})")
  message(STATUS "**   Python: ${PYTHON_EXECUTABLE}")
  message(STATUS "**   Doxygen: ${DOXYGEN_EXECUTABLE}")
  message(STATUS "**   xsltproc: ${XSLTPROC_VERSION}")
endif()
