find_package(PythonModules 3.7 COMPONENTS sphinx dparser)
find_package(Doxygen QUIET)
find_package(Xsltproc QUIET)
if(XSLTPROC_FOUND AND PythonModules_sphinx_FOUND AND PythonModules_dparser_FOUND AND DOXYGEN_FOUND)
  add_subdirectory(sphinx)
else()
  message(STATUS "**")
  message(STATUS "** Generation of documentation is disabled, not all prerequisites are met:")
  message(STATUS "**   Python packages: Sphinx (${PythonModules_sphinx_FOUND}), DParser (${PythonModules_dparser_FOUND})")
  message(STATUS "**   Python: ${PYTHON_EXECUTABLE}")
  message(STATUS "**   Doxygen: ${DOXYGEN_EXECUTABLE}")
  message(STATUS "**   xsltproc: ${XSLTPROC_VERSION}")
endif()
