###
### The mCRL2 libraries
###

add_subdirectory(atermpp)
add_subdirectory(core)
add_subdirectory(data)
add_subdirectory(gui)
add_subdirectory(lps)
add_subdirectory(lts)
add_subdirectory(modal_formula)
add_subdirectory(pbes)
add_subdirectory(pres)
add_subdirectory(pg)
add_subdirectory(process)
add_subdirectory(smt)
add_subdirectory(symbolic)
add_subdirectory(utilities)
